test: fix Find Command tests to ensure tests work with new changes